Terminando la lógica del input y procediendo al código QR

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -26,6 +26,7 @@ body {
   width: 20rem;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   flex-direction: column;
+  gap: 2rem;
 }
