--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -13,7 +13,7 @@ body {
   min-height: 100vh;
   display: grid;
   place-items: center;
-  background: linear-gradient(to bottom, #181818, #1f0c1c);
+  background: linear-gradient(to bottom, #181818, #641659);
   color: azure;
 }
 
